Closed Bug 460738 Opened 16 years ago Closed 16 years ago

<video> seems to download/stream from net even if the page has been left through e.g. a link

Categories

(Core :: Audio/Video, defect, P2)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: thomas, Assigned: cajbir)

References

()

Details

(Keywords: fixed1.9.1)

Attachments

(1 file, 1 obsolete file)

User-Agent:       Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.1b2pre) Gecko/20081019 Minefield/3.1b2pre
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.1b2pre) Gecko/20081019 Minefield/3.1b2pre

Looks like related to bug 451457

Reproducible: Always

Steps to Reproduce:
1. Go to example URL
2. Leave page through one of the links or put an new URL in the bar and load it.

Actual Results:  
Data still flowing from the net.
(In addition it won't play the same URI in any other page, even a reload triggers this)

Expected Results:  
Data flow should stop when leaving the page.

The data flow will stop of course if the tab or window is closed.
I have experienced this problem on Windows XP so I suggest this bug is not limited to just the Linux platform.
I've set it to generic, after all it's core and should be platform independent.
OS: Linux → All
Hardware: PC → All
Should the status change from unconfirmed to confirmed?
This issue is similar to bug 449096 
and was fixed on windows by fix for bug 451457.

But now another situation like bug 470636 is happening in windows 
whether that is happening on Linux also?

Key difference of bug 470636 is 
1. "In addition it won't play the same URI in any other page"
no bug 470636 will allow same uri on another tab

2. "even a reload triggers this"
no bug 470636 will stop playing
This download still occurs because the media is still in the bfcache, and is paused. When a media playback is paused it still continues to download from the net. On Freeze it should really suspend the download and resume it when Thawed in some way.
Attached patch First cut at a fix (obsolete) — Splinter Review
This is a first cut at a fix. When the element is moved into the bfcache I call Suspend on the underlying channel, and Resume when it is brought back. This requires passing the suspend/resume calls from the element, to the decoder, to the reader, to the stream and from there to the channel.

Needs more testing, and applying to the wave backend as well.

Requires the patch in bug 470636 to be applied first, otherwise Freeze and Thaw never get called.
Assignee: nobody → chris.double
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Depends on: 470636
I think this should be blocking 1.9.1 as we don't want users using all their bandwidth when navigating pages and one of them happens to contain a large video or live stream.
Flags: blocking1.9.1?
Flags: blocking1.9.1? → blocking1.9.1+
Attached patch Fix wave backendSplinter Review
Add fix for wave backend.
Attachment #354110 - Attachment is obsolete: true
Attachment #357091 - Flags: superreview?(roc)
Attachment #357091 - Flags: review?(kinetik)
Attachment #357091 - Flags: superreview?(roc) → superreview+
Attachment #357091 - Flags: review?(kinetik) → review+
Pushed to mozilla-central:
http://hg.mozilla.org/mozilla-central/rev/7aec588d41a3
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [baking for 1.9.1]
Pushed to mozilla-1.9.1:
http://hg.mozilla.org/releases/mozilla-1.9.1/rev/5f04646ca782
Keywords: fixed1.9.1
Whiteboard: [baking for 1.9.1]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: