Bug 460738 - Suspend media downloads when in bfcache - r=kinetik sr=roc