content/html/content/src/nsHTMLMediaElement.cpp
@@ -1146,11 +1146,18 @@ void nsHTMLMediaElement::Freeze()
   if (!mPaused) {
     Pause();
   }
+  if (mDecoder) {
+    mDecoder->Suspend();
+  }
 }
 
 void nsHTMLMediaElement::Thaw()
 {
   if (!mPausedBeforeFreeze) {
     Play();
+  }
+
+  if (mDecoder) {
+    mDecoder->Resume();
   }
 }
