content/media/video/src/nsWaveDecoder.cpp
@@ -1445,3 +1445,19 @@ nsWaveDecoder::GetSeekable()
 {
   return mSeekable;
 }
+
+void
+nsWaveDecoder::Suspend()
+{
+  if (mStream) {
+    mStream->Suspend();
+  }
+}
+
+void
+nsWaveDecoder::Resume()
+{
+  if (mStream) {
+    mStream->Resume();
+  }
+}
